e2e/pods/restart-policy/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
collectors:
  - type: pod
    pod: restart-never
    tail: 20
---
apiVersion: v1
kind: Pod
metadata:
  name: restart-never
status:
  phase: Succeeded
