e2e/pods/restart-policy/02-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
collectors:
  - type: pod
    pod: restart-always
    tail: 20
commands:
  - script: |
      set -e
      count=$(kubectl get pod restart-always -n $NAMESPACE -o jsonpath='{.status.containerStatuses[0].restartCount}')
      test "$count" -gt 0
